# framework

./: BufferCommon.h  BufferProxy.h  CMakeLists.txt  ConcurrentQueue.h  IArgument.h  IAsyncRunnable.h  IAsyncRunner.h  IBuffer.h  IConfig.h  IIOListener.h  IIOProvider.h  IJSONConvertible.h  ILogger.h  IMessage.h  IMessagePtr.h  IMessageReceiver.h  IMessageSink.h  IOListener.cpp  IOListener.h  IOProvider.cpp  IOProvider.h  IReadBuffer.h  IReadable.h  IRunnable.h  ISerialPort.h  ITimer.h  IWritable.h  IWriteBuffer.h  JSON.cpp  JSON.h  Logger.h  README.md  RelTimerMs.cpp  RelTimerMs.h  ScopeSetter.h  SerialPort.cpp  SerialPort.h  SimpleEventApp.h  SimpleLogger.cpp  SimpleLogger.h  (+15 more)
test/: CMakeLists.txt  IAppMessage.h  ITestApp.h  MockSerialPort.cpp  MockSerialPort.h  TestApp.cpp  TestApp.h  TestMessages.cpp  TestMessages.h  test.cpp
test/serialcomtest/: CMakeLists.txt  serialcomtest.cpp
